--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
 
             <a class="btn btn-primary" href="publico.html">Pantalla publica</a>
             <a class="btn btn-secondary" href="nuevo-ticket.html">Crear Tickets</a>
+            <a class="btn btn-secondary" style="padding: 25px; background: red; font-size: 20px;" href="./JW_PUB/fg_CR.pdf">Bon nouvel Bondye bay la PDF</a>
+
 
         </div>
 
